deployment/service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: simple-gradio
  labels:
    app: simple-gradio
spec:
  clusterIP: None
  ipFamilies:
    - IPv4
  ports:
    - name: http
      protocol: TCP
      port: 7860
      targetPort: http
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  sessionAffinity: None
  selector:
    app: simple-gradio
